2012-09-28  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #6530]
	* stdio-common/vfprintf.c (process_string_arg): Revert
	2000-07-22 change.

2011-09-28  Jonathan Nieder  <jrnieder@gmail.com>

	* stdio-common/Makefile (tst-sprintf-ENV): Set environment
	for testcase.
	* stdio-common/tst-sprintf.c: Include <locale.h>
	(main): Test sprintf's handling of incomplete multibyte
	characters.

2012-09-25  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14621]
	* posix/glob.c (next_brace_sub): Use size_t instead of unsigned
	int as type of variable DEPTH.
	(glob): Use size_t instead of int as type of variables NEWCOUNT
	and OLD_PATHC.

2012-09-24  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14562]
	* malloc/arena.c (heap_trim): Properly get fencepost and adjust
	new chunk size with MALLOC_ALIGN_MASK.

2012-08-29  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14476]
	* Makefile (install): Also pass LD_SO=$(ld.so-version) to
	scripts/test-installation.pl.
	* scripts/test-installation.pl: Use LD_SO to get $ld_so_name
	and $ld_so_version if it is set.

2012-08-27  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14459]
	* stdlib/strtod_l.c: Include <stdint.h>.
	(NDEBUG): Do not define.
	(round_and_return): Change EXPONENT parameter to type intmax_t.
	Rearrange calculations to avoid internal overflow possibilities.
	(str_to_mpn): Change EXPONENT parameter to type intmax_t *.
	Rearrange calculations to avoid internal overflow possibilities.
	Assert that number fits inside MPNSIZE limbs.
	(____STRTOF_INTERNAL): Change EXPONENT variable to type intmax_t.
	Change DIG_NO, INT_NO and LEAD_ZERO to type size_t.  Rearrange
	calculations and add assertions to avoid internal overflow
	possibilities.  Add casts to avoid signed/unsigned operations.
	* stdlib/tst-strtod-overflow.c: New file.
	* stdlib/Makefile (tests): Add tst-strtod-overflow.

2012-08-15  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	[BZ #14195]
	* sysdeps/i386/i686/multiarch/strcmp-sssse3.S: Fix