@@ -9,7 +9,7 @@ Version 2.16.1
 
 * The following bugs are resolved with this release:
 
-  6530, 14195, 14459, 14476, 14562, 14621
+  6530, 14195, 14459, 14476, 14562, 14621, 14648
 
 Version 2.16
 
